# DangerousFlight

./: .gitignore  CMakeLists.txt  DF.vcxproj  DF.vcxproj.filters  DangerousFlight.geany  DangerousFlight.win.geany  README.md
config/: ca_w  ca_w.ini
include/: SDL_rotozoom.h  alphachannel.h  bottom.h  environment.h  explode.h  gear.h  global.h  missle.h  player.h  spec.h  sprite.h  ui.h
res/: build_res.sh
res/addition/: exp_00.xcf  gameover.xcf  intro.xcf  untitled.blend
res/addition/env_blend/: sea.blend
res/omods/: omod_ca_r.blend  omod_ca_w.blend  omod_ca_w.blend1  omod_ca_w.blend2  omod_cloud.blend  omod_cloud.blend1  omod_cloud.blend2  omod_envobj_sea.blend  omod_explode.blend  omod_explode.blend1  omod_explode.blend2  omod_missle.blend  omod_missle.blend1  omod_missle.blend2
res/omods/anim_explode/: omod_explode.blend  omod_explode.blend1  omod_explode.blend2
res/omods/anim_explode/blendcache_omod_explode/: 537068657265_000001_00.bphys  537068657265_000002_00.bphys  537068657265_000003_00.bphys  537068657265_000004_00.bphys  537068657265_000005_00.bphys  537068657265_000006_00.bphys  537068657265_000007_00.bphys  537068657265_000008_00.bphys  537068657265_000009_00.bphys  537068657265_000010_00.bphys  537068657265_000011_00.bphys  537068657265_000012_00.bphys  537068657265_000013_00.bphys  537068657265_000014_00.bphys  537068657265_000015_00.bphys  537068657265_000016_00.bphys  (+104 more)
src/: CMakeLists.txt  SDL_rotozoom.c  alphachannel.c  bottom.c  df.c  environment.c  explode.c  gear.c  missle.c  player.c  spec.c  sprite.c  super2d.c  ui.c
